enhance replication error management
Rely on AWS client to retry based on if the error is retryable or not.

 - number of retries is limited by the "maxRetries" param on both
   source and destination S3 config (default 100)

 - permanent errors or requests that reached the retry limit lead to
   the status FAILED being written on the source object version.

 - failures to write the replication status also lead to retries.

Tests should be written, but they will be in a later PR as the code
will need instrumentation that will likely conflict with other pending
PRs.

--- a/conf/config.json
+++ b/conf/config.json
@@ -12,7 +12,8 @@
                 "s3": {
                     "host": "127.0.0.1",
                     "port": 8000,
-                    "transport": "https"
+                    "transport": "https",
+                    "maxRetries": 100,
                 },
                 "auth": {
                     "type": "account",
@@ -38,6 +39,7 @@
                     "host": "127.0.0.2",
                     "port": 9000,
                     "transport": "https"
+                    "maxRetries": 100,
                 },
                 "auth": {
                     "type": "account",
